fix: wrap 이 모든 컴포넌트에서 잡혀서 별도 이름 부여

--- a/src/stories/responsiveCard.css
+++ b/src/stories/responsiveCard.css
@@ -4,7 +4,7 @@
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif
 }
 
-#wrap {
+#responsiveCardWrap {
   width: 100vw;
   height: 100vh; /* 추가 */
   display: flex;
